--- a/projects/00-hola-mundo/src/App.css
+++ b/projects/00-hola-mundo/src/App.css
@@ -38,14 +38,35 @@
     transition: .3s ease background-color;
 }
 
-.tw-followCard-button.is-following{
-    border: 1px solid red;
+.tw-followCard-button:hover {
+    opacity: .8;
 }
 
-.tw-followCard-button:hover {
-    background: #09f;
+tw-followCard-text {
+    display: block;
+}
+
+.tw-followCard-button.is-following{
+    border: 1px solid #bbb;
+    background: transparent;
+    color:#fff;
+    width: 130px;
 }
 
 .tw-followCard-button.is-following:hover {
-    background: red;
+    background: rgb(255, 102, 102, 0.05);
+    color: red;
+    border: 1px solid red;
+}
+
+.tw-followCard-button.is-following:hover .tw-followCard-text {
+    display: none;
+}
+
+.tw-followCard-button.is-following:hover .tw-followCard-stopFollow{
+    display:block;
+}
+
+.tw-followCard-stopFollow{
+    display:none;
 }
