p4 prueba tecnica refactorizada con custom hooks y tests

--- a/projects/04-prueba-tecnica-react/src/App.css
+++ b/projects/04-prueba-tecnica-react/src/App.css
@@ -1,6 +1,6 @@
 main {
     display: flex;
-    flex-direction:center;
+    flex-direction:column;
     place-items: center;
     max-width: 800px;
     margin: 0 auto;
